data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2216.wast
;; 7. **Invalid Backward Reference**:    Formulate a nested block scenario that attempts to use `br` or `br_if` with a backward reference, which is not allowed. This checks if the implementation correctly identifies and blocks backward references within nested blocks.

(assert_invalid
  (module 
    (func $backward_reference
      (block (block (br 1)) (unreachable)))
  )
  "invalid backward reference"
)